# handshake

include/IR/: CMakeLists.txt  HandshakeOps.h  HandshakeOps.td
include/StandardToHandshake/: StandardToHandshake.h
lib/: CMakeLists.txt
lib/IR/: CMakeLists.txt  HandshakeOps.cpp
lib/StandardToHandshake/: StandardToHandshake.cpp
test/: CMakeLists.txt  lit.cfg.py
test/StandardToHandshake/: test1.mlir  test10.mlir  test11.mlir  test12.mlir  test13.mlir  test14.mlir  test15.mlir  test16.mlir  test17.mlir  test18.mlir  test19.mlir  test2.mlir  test20.mlir  test21.mlir  test22.mlir  test23.mlir  test24.mlir  test25.mlir  test26.mlir  test27.mlir  test28.mlir  test29.mlir  test3.mlir  test30.mlir  test31.mlir  test32.mlir  test33.mlir  test34.mlir  test35.mlir  test4.mlir  test5.mlir  test6.mlir  test7.mlir  test8.mlir  test9.mlir
test/handshake-runner/: call_bb.mlir  cdiv-old-std.mlir  cdiv-std.mlir  complex_bb.mlir  floydwarshall-std.mlir  histogram-std.mlir  loadstore.mlir  loop-check-1-std.mlir  loop-check-2-std.mlir  matmul-check-std.mlir  matmul-std.mlir  memory_simple_2_std.mlir  memory_simple_std.mlir  simple_loop.mlir
tools/: CMakeLists.txt
tools/handshake-opt/: CMakeLists.txt  handshake-opt.cpp
tools/handshake-runner/: handshake-runner.cpp
